# projeto-jogos-digitais

./: .gitignore  CMakeLists.txt  README.md
Client/: Client.cpp  Client.h  ClientOperations.cpp  ClientOperations.h  DataObjects.h  SDLInputParser.cpp  SDLInputParser.h
Network/: Addresses.cpp  Addresses.h  Logger.h  NetUtils.cpp  NetUtils.h  Packet.h  Platforms.h  Socket.cpp  Socket.h
Shaders/: AdvancedGrid.frag  AdvancedGrid.vert  Base.frag  Base.vert  CRT.frag  CRT.vert  Grid.frag  Grid.vert  README_AdvancedGrid.md  Sprite.frag  Sprite.vert
Source/: AudioSystem.cpp  AudioSystem.h  Game.cpp  Game.h  Main.cpp  Math.h  PathResolver.cpp  PathResolver.h  Random.cpp  Random.h
Source/Actors/: Actor.cpp  Actor.h  Floor.cpp  Floor.h  LaserBeam.cpp  LaserBeam.h  Ship.cpp  Ship.h
Source/Audio/: OpeningAudio.cpp  OpeningAudio.h
Source/Components/: CircleColliderComponent.cpp  CircleColliderComponent.h  Component.cpp  Component.h  DrawComponent.cpp  DrawComponent.h  GridDrawComponent.cpp  GridDrawComponent.h  LaserBeamComponent.cpp  LaserBeamComponent.h  ParticleSystemComponent.cpp  ParticleSystemComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h  TrailComponent.cpp  TrailComponent.h
Source/Renderer/: AdvancedGridExample.cpp  AudioPlayer.cpp  AudioPlayer.h  Font.cpp  Font.h  PlatformCompatibility.cpp  PlatformCompatibility.h  PostProcessor.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VideoPlayer.cpp  VideoPlayer.h
Source/UI/: MenuHUD.cpp  MenuHUD.h  UIButton.cpp  UIElement.h  UIImage.cpp  UIImage.h  UIInputField.cpp  UIInputField.h  UIRect.cpp  UIText.cpp  UITriangle.cpp  UITriangle.h  UIVideo.cpp  UIVideo.h
Source/UI/Screens/: Connect.cpp  Connect.h  Endgame.cpp  Endgame.h  GameOver.cpp  GameOver.h  HUD.cpp  MainMenu.cpp  MainMenu.h  OpeningScreen.cpp  OpeningScreen.h  UIScreen.cpp  UIScreen.h
Source/Video/: VideoPlayer.cpp  VideoPlayer.h
Title/: index.html  styles.css
